--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "nuxt": "^3.4.1",
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "three": "^0.146.0",
+    "@types/three": "^0.146.0"
+    
   },
   "dependencies": {
     "sanitize-html": "^2.10.0"
