--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.4.5",
     "@nuxt/image-edge": "^1.0.0-28020728.5df24eb",
     "@nuxtjs/style-resources": "^1.2.1",
     "@types/node": "^18",
