--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "vue-lite-youtube-embed": "^1.2.0"
   }
 }
