--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@types/node": "^20",
     "@types/three": "^0.146.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.1",
+    "nuxt": "^3.6.0",
     "nuxt-icon": "^0.4.0",
     "nuxt-simple-sitemap": "^2.7.0",
     "prettier": "^2.8.8",
@@ -29,5 +29,8 @@
     "sass-loader": "^13.2.2",
     "three": "^0.153.0",
     "vue-lite-youtube-embed": "^1.2.0"
+  },
+  "dependencies": {
+    "typescript": "^5.1.3"
   }
 }
