--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "dofe-website",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -28,9 +28,13 @@
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "three": "^0.153.0",
+    "vue-gtag-next": "^1.14.0",
     "vue-lite-youtube-embed": "^1.2.0"
   },
   "dependencies": {
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite": "^4.4.3",
+    "vue": "^3.3.4",
+    "webpack": "^5.88.1"
   }
 }
